Version-0.2-00/Manifests/2.1_Mariadb_Statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: wordpressmariadb
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:11
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: config-volume
          mountPath: /etc/mysql/conf.d
        - name: mariadbdata
          mountPath: /var/lib/mysql/
      volumes:
      - name: config-volume
        configMap:
          name: mariadb-config
          items:
          - key: my.cnf
            path: my.cnf

  volumeClaimTemplates:
    - metadata:
        name: mariadbdata
      spec:
        storageClassName: kang-csi
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
