Version-0.2-00/Manifests/3.1_Wordpress_StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress
  namespace: wordpressmariadb
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        webserver: nginx  # Add this line
    spec:
      containers:
      - name: wordpress
        image: wordpress:php8.2-fpm
        ports:
        - containerPort: 9000
        volumeMounts:                      # Add this section
        - name: wordpressdata
          mountPath: /var/www/
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:                      # Add this section
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d
        - name: wordpressdata
          mountPath: /var/www/
      volumes:                                       # Add this section
      - name: nginx-config-volume
        configMap:
          name: nginx-config

  volumeClaimTemplates:
    - metadata:
        name: wordpressdata
      spec:
        storageClassName: kang-csi
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
